--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -87,7 +87,7 @@ Libraries
 
 - **Validation:** Added ``Validation::getValidated()`` method that gets
   the actual validated data. See :ref:`validation-getting-validated-data` for details.
-- **Images:** Now WebP images can be used option ``$quality`` for compression
+- **Images:** Now WebP images can be used option ``$quality`` for compression.
 
 Helpers and Functions
 =====================
