--- a/source/changelogs/v4.3.5.rst
+++ b/source/changelogs/v4.3.5.rst
@@ -1,7 +1,7 @@
 Version 4.3.5
 #############
 
-Release Date: Unreleased
+Release Date: May 21, 2023
 
 **4.3.5 release of CodeIgniter4**
 
@@ -17,12 +17,6 @@ SECURITY
   for more information.
 - Fixed that ``Session::stop()`` did not destroy the session.
   See :ref:`Session Library <session-stop>` for details.
-
-BREAKING
-********
-
-Message Changes
-***************
 
 Changes
 *******
