--- a/source/changelogs/v4.4.0.rst
+++ b/source/changelogs/v4.4.0.rst
@@ -120,6 +120,7 @@ Message Changes
 Changes
 *******
 
+- **Images:** Since ``v4.4`` quality WebP not using default PHP.
 - **Config:** The deprecated Cookie items in **app/Config/App.php** has been removed.
 - **Config:** Routing settings have been moved to **app/Config/Routing.php** config file.
   See :ref:`Upgrading Guide <upgrade-440-config-routing>`.
